--- a/FlaskWebProject1/FlaskWebProject1/FlaskWebProject1/static/content/bootstrap.css
+++ b/FlaskWebProject1/FlaskWebProject1/FlaskWebProject1/static/content/bootstrap.css
@@ -72,15 +72,48 @@ summary {
 
 }
 
-#check {
+#checkcollateral {
   width: 80%;
   margin: 15px;
   margin-top: 15px;
-  border: 1px solid black;
   border-top-color: black;
   border-top-style: solid;
   border-top-width: 1px;
   border-radius: 6px;
+  border: 1px solid black;
+}
+
+#checkaccounts {
+  width: 80%;
+  margin: 15px;
+  margin-top: 15px;
+  border-top-color: black;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-radius: 6px;
+  border: 1px solid black;
+}
+
+#checkcreditcards {
+  width: 80%;
+  margin: 15px;
+  margin-top: 15px;
+  border-top-color: black;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-radius: 6px;
+  border: 1px solid black;
+}
+
+#checkloans {
+  width: 80%;
+  margin: 15px;
+  margin-top: 15px;
+  border-top-color: black;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-radius: 6px;
+  border: 1px solid black;
 }
 
 .check_error{
